updated my html

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Paddy's Pub Social Network</title>
+	<title>Friend Finder!!</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/style.css">
@@ -9,8 +9,8 @@
 </head>
 <body class="site">
 	<div class="container content">
-		<h1>Paddy's Pub Social Network</h1>
-		<p>Welcome to the exclusive new Friend Finder based in Philly. We only accept the best of the best, so losers need not apply! After our state-of-the-art screening process, you will be paired with your new best friend for life. Our algorithm will catch you if you are not up to par, and will find your perfect match. Romantic or platonic? You decide!</p>
+		<h1>Friend Finder</h1>
+		<p>If you need a friend we can help you.</p>
 		
 		<div class="text-center">
 			<a href="/survey"><button class="btn btn-lg btn-success">Take Survey</button></a>
